@@ -4,7 +4,6 @@ import com.example.onlineLibrary.model.dto.BookInfoResponse;
 import com.example.onlineLibrary.model.dto.LoanDto;
 import com.example.onlineLibrary.model.entity.Loan;
 import com.example.onlineLibrary.model.entity.User;
-import com.example.onlineLibrary.model.enums.CategoryName;
 import com.example.onlineLibrary.repository.LoanRepository;
 import com.example.onlineLibrary.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
@@ -13,7 +12,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,108 +27,77 @@ public class LoanService {
     private final String libraryBaseUrl = "http://localhost:8081/api/books";
 
     // ==============================
-    // Vrati sve pozajmice za korisnika
+    // Konverzija Loan -> LoanDto
     // ==============================
     public LoanDto convertToDto(Loan loan) {
         LoanDto dto = new LoanDto();
+
+        // Osnovna polja iz Loan
         dto.setLoanId(loan.getId());
         dto.setBookId(loan.getBookId());
+        dto.setBookTitle(loan.getBookTitle());
         dto.setLoanDate(loan.getLoanDate());
         dto.setReturnDate(loan.getReturnDate());
         dto.setReturned(loan.isReturned());
         dto.setUsername(loan.getUser().getUsername());
 
-        LocalDate dueDate = loan.getLoanDate().plusDays(15);
-        dto.setDueDate(dueDate);
-        dto.setOverdue(!loan.isReturned() && LocalDate.now().isAfter(dueDate));
+        // Overdue warning (>15 dana od loanDate i knjiga nije vraćena)
 
+        if (!loan.isReturned()) {
+            long days = ChronoUnit.DAYS.between(loan.getLoanDate(), LocalDate.now());
+            dto.setOverdue(days > 15 && days <= 30); // warning za 15-30 dana
+        }
+
+        // Popuni bookAuthor i bookCategory preko LibraryMicroservice
         try {
             BookInfoResponse book = restTemplate.getForObject(
                     libraryBaseUrl + "/" + loan.getBookId(),
                     BookInfoResponse.class
             );
-
             if (book != null) {
                 dto.setBookTitle(book.getTitle());
                 dto.setBookAuthor(book.getAuthorName());
                 dto.setBookCategory(book.getCategory());
             } else {
-                dto.setBookTitle(loan.getBookTitle() + " (Obrisana)");
-                dto.setBookAuthor("-");
-                dto.setBookCategory(CategoryName.UNKNOWN);
+                // Knjiga obrisana
+                dto.setBookTitle(loan.getBookTitle() + " (obrisana)");
+                dto.setBookAuthor("N/A");
+                dto.setBookCategory(null);
             }
-
         } catch (Exception e) {
-            dto.setBookTitle(loan.getBookTitle() + " (Obrisana)");
-            dto.setBookAuthor("-");
-            dto.setBookCategory(CategoryName.UNKNOWN);
+            // Ako REST ne radi ili knjiga obrisana
+            dto.setBookTitle(loan.getBookTitle() + " (obrisana)");
+            dto.setBookAuthor("N/A");
+            dto.setBookCategory(null);
         }
 
+        // Opcionalno: postavi dueDate na 15 dana od loanDate
+        dto.setDueDate(loan.getLoanDate().plusDays(15));
 
         return dto;
     }
+
     @Transactional(readOnly = true)
     public List<LoanDto> getActiveLoansByUser(String username) {
-        return loanRepository.findByUserUsername(username).stream()
-                .map(loan -> convertToDto(loan))
-                .toList();
-    }
-
-    // ==============================
-    // Sve pozajmice (admin)
-    // ==============================
-    @Transactional(readOnly = true)
-    public List<LoanDto> getAllLoansDto() {
-        return loanRepository.findAll().stream()
+        List<Loan> loans = loanRepository.findActiveLoansByUsername(username);
+        return loans.stream()
                 .map(this::convertToDto)
-                .filter(dto -> dto != null) // uklanjamo obrisane knjige
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // ==============================
-    // Kreiranje pozajmice
-    // ==============================
-    @Transactional
-    public void createLoanByIds(Long userId, Long bookId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("Korisnik nije pronađen."));
-
-        Loan loan = new Loan();
-        loan.setUser(user);
-        loan.setBookId(bookId);
-        loan.setLoanDate(LocalDate.now());
-        loan.setReturned(false);
-
-        loanRepository.save(loan);
-
-        // Označi knjigu kao nedostupnu
-        try {
-            restTemplate.put(libraryBaseUrl + "/" + bookId + "/availability?available=false", null);
-        } catch (Exception e) {
-            // REST nije dostupan, samo logujemo
-            System.out.println("Ne mogu da update-ujem dostupnost knjige: " + e.getMessage());
-        }
-    }
-
-    // ==============================
-    // Vrati knjigu - samo vlasnik može
-    // ==============================
     @Transactional
     public void returnLoan(Long loanId, String username) {
         Loan loan = loanRepository.findById(loanId)
                 .orElseThrow(() -> new RuntimeException("Pozajmica nije pronađena."));
 
-        // Provera vlasništva
         if (!loan.getUser().getUsername().equals(username)) {
             throw new RuntimeException("Ne možeš da vratiš tuđu knjigu!");
         }
 
-        // Obeležavanje pozajmice kao vraćene
         loan.setReturned(true);
         loan.setReturnDate(LocalDate.now());
         loanRepository.save(loan);
 
-        // Update dostupnosti knjige u LibraryMicroservice
         try {
             restTemplate.put(
                     libraryBaseUrl + "/" + loan.getBookId() + "/availability?available=true",
@@ -139,15 +109,12 @@ public class LoanService {
     }
 
     @Transactional
-    public void borrowBook(String username, Long bookId) {
+    public void createLoanByIds(Long userId, Long bookId) {
         // 1️⃣ Nađi korisnika
-        User user = userRepository.findByUsername(username)
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("Korisnik nije pronađen"));
-        if (user.isBlocked()) {
-            throw new RuntimeException("Blokirani korisnici ne mogu pozajmiti nove knjige!");
-        }
 
-        // 2️⃣ Proveri da li je knjiga dostupna (pozovi LibraryMicroservice)
+        // 2️⃣ Pozovi LibraryMicroservice da dobiješ detalje knjige
         BookInfoResponse book;
         try {
             book = restTemplate.getForObject(libraryBaseUrl + "/" + bookId, BookInfoResponse.class);
@@ -158,17 +125,87 @@ public class LoanService {
             throw new RuntimeException("Greška pri povezivanju sa LibraryMicroservice: " + e.getMessage());
         }
 
-        // 3️⃣ Kreiraj novu pozajmicu i sačuvaj naslov knjige
+        // 3️⃣ Kreiraj pozajmicu i sačuvaj naslov knjige
+        Loan loan = Loan.builder()
+                .user(user)
+                .bookId(bookId)
+                .bookTitle(book.getTitle())
+                .returned(false)
+                .loanDate(LocalDate.now())
+                .build();
+        loanRepository.save(loan);
+
+        // 4️⃣ Označi knjigu kao nedostupnu u LibraryMicroservice
+        try {
+            restTemplate.put(libraryBaseUrl + "/" + bookId + "/availability?available=false", null);
+        } catch (Exception e) {
+            System.out.println("Ne mogu da update-ujem dostupnost knjige: " + e.getMessage());
+        }
+    }
+
+
+    @Transactional(readOnly = true)
+    public List<LoanDto> getAllLoansDto() {
+        List<Loan> loans = loanRepository.findAll();
+
+        return loans.stream()
+                .map(loan -> {
+                    LoanDto dto = convertToDto(loan); // postojeći convertToDto
+                    try {
+                        // Popuni dodatna polja preko LibraryMicroservice
+                        BookInfoResponse book = restTemplate.getForObject(
+                                libraryBaseUrl + "/" + loan.getBookId(),
+                                BookInfoResponse.class
+                        );
+                        if (book != null) {
+                            dto.setBookAuthor(book.getAuthorName());
+                            dto.setBookCategory(book.getCategory());
+                        }
+                    } catch (Exception e) {
+                        System.out.println("Ne mogu da dobijem detalje knjige: " + e.getMessage());
+                    }
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+
+    public boolean existsByBookIdAndReturnedFalse(Long bookId) {
+        return loanRepository.existsByBookIdAndReturnedFalse(bookId);
+    }
+
+    @Transactional
+    public void borrowBook(String username, Long bookId) {
+        // 1️⃣ Pronađi korisnika
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new RuntimeException("Korisnik nije pronađen"));
+
+        // 2️⃣ Proveri da li je korisnik blokiran
+        if (user.isBlocked()) {
+            throw new RuntimeException("Blokirani korisnici ne mogu pozajmiti nove knjige!");
+        }
+
+        // 3️⃣ Proveri dostupnost knjige u LibraryMicroservice
+        BookInfoResponse book;
+        try {
+            book = restTemplate.getForObject(libraryBaseUrl + "/" + bookId, BookInfoResponse.class);
+            if (book == null || !book.isAvailable()) {
+                throw new RuntimeException("Knjiga nije dostupna za pozajmicu");
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Greška pri povezivanju sa LibraryMicroservice: " + e.getMessage());
+        }
+
+        // 4️⃣ Kreiraj novu pozajmicu i sačuvaj naslov knjige
         Loan loan = Loan.builder()
                 .bookId(bookId)
-                .bookTitle(book.getTitle()) // <-- ovde čuvamo naslov
+                .bookTitle(book.getTitle())   // čuvamo naslov knjige
                 .user(user)
                 .loanDate(LocalDate.now())
                 .returned(false)
                 .build();
         loanRepository.save(loan);
 
-        // 4️⃣ Update dostupnosti knjige u LibraryMicroservice
+        // 5️⃣ Update dostupnosti knjige u LibraryMicroservice
         try {
             restTemplate.put(
                     libraryBaseUrl + "/" + bookId + "/availability?available=false",
@@ -179,11 +216,28 @@ public class LoanService {
         }
     }
 
+    @Transactional
     public void returnBookByBookId(Long bookId, String username) {
+        // 1️⃣ Pronađi aktivnu pozajmicu za datu knjigu i korisnika
+        Loan loan = loanRepository
+                .findByBookIdAndUserUsernameAndReturnedFalse(bookId, username)
+                .orElseThrow(() ->
+                        new IllegalStateException("Ne postoji aktivna pozajmica za ovu knjigu"));
+
+        // 2️⃣ Obeleži pozajmicu kao vraćenu
+        loan.setReturned(true);
+        loan.setReturnDate(LocalDate.now());
+        loanRepository.save(loan);
+
+        // 3️⃣ Update dostupnosti knjige u LibraryMicroservice
+        try {
+            restTemplate.put(
+                    libraryBaseUrl + "/" + bookId + "/availability?available=true",
+                    null
+            );
+        } catch (Exception e) {
+            System.out.println("Ne mogu da update-ujem dostupnost knjige: " + e.getMessage());
+        }
     }
 
-    // Proverava da li neka knjiga ima aktivnu pozajmicu
-    public boolean existsByBookIdAndReturnedFalse(Long bookId) {
-        return loanRepository.existsByBookIdAndReturnedFalse(bookId);
-    }
 }
